# cze-wp-scraper

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: run_all_matches.py
src/cze_wp_scraper/models/: __init__.py  match.py
src/cze_wp_scraper/scraper/: __init__.py  client.py  parser.py  scraper.py
src/cze_wp_scraper/utils/: constants.py  exceptions.py
tests/fixtures/: example_match.html
tests/unit/models/: test_match.py
tests/unit/scraper/: test_client.py  test_parser.py  test_scraper.py
