[project]
name = "cze-wp-scraper"
version = "0.1.0"
description = "Web scraper for Czech Water Polo match results from csvp.cz"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pandas>=2.0.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2", 
    "mypy>=1.19.1", 
    "ruff>=0.14.10",
    "pytest-env>=1.1.3",
    "pytest-mock>=3.14.0",
    "pytest-cov>=7.0.0",
    "pytest-random-order>=1.1.1",
    "pytest-asyncio>=0.26.0"
]


[tool.pytest.ini_options]
markers = ["default: Default marker."]
env = []
pythonpath = ["src"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "if TYPE_CHECKING:"
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
order-by-type = true
force-single-line = false
known-first-party = ["cze_wp_scraper", "tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
   "A",       # prevent using keywords that clobber python builtins
   "B",       # bugbear: security warnings
   "C",       # Mccabe complexity
   "D",       # pydocstyle
   "E",       # pycodestyle
   "F",       # pyflakes
   "I",       # Isort. Import order
   "W",       # Warnings
   "UP",      # alert you when better syntax is available in your python version
   "ARG",     # flake8-Unused-Arguments
   "PIE",     # flake8-pie
   "RET",     # flake8-return
   "RUF",     # the ruff developer's own rules
   "SIM",     # flake8-Simplify
   "TCH",     # Flake8-Type-Checking
   "COM",     # Flake8-Commas
   "ERA",     # Eradicate dead code
   "PLR1714", # Merge repeated comparisons using a set
   "PLR5501", # Use elif instead of else then if, to reduce indentation
   "TID252"   # Prefer absolute imports over relative imports from parent modules
]

ignore = [
    "COM812",# Supress because it sometimes conflicts with the formatter.
    "E501",  # Supress line-too-long warnings: they are handled by the formater.
    "E712",  # Allow using if x == False, as it's not always equivalent to if x.
    "UP017", # Allow timezone.utc instead of datetime.UTC.
    "E731",  # Do not assign a lambda expression, use a def
    "B008",  # Do not perform function calls in argument defaults,
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Ignore missing docstring in magic method
    "D415",  # Ignore first line should end with a period, question mark, or exclamation point
]
pydocstyle.convention = "google"  # Enforce Google docstring style

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",        # Ignore docstring requirements for tests
    "ARG001",   # Ignore unused arguments in tests
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_return_any = true          # Warn on functions that return Any and have another return type in their signature
warn_unused_ignores = true      # Warns about unneeded # type: ignore comments.
warn_unused_configs = true      # Wanrs about unused mypy configurations in modules.
disallow_untyped_defs = false    # Disallow defining functions without type annotations
disallow_any_unimported = false  # Disallow using Any types from unfollowed imports
check_untyped_defs = true       # Type-checks the interior of functions without type annotations.
ignore_missing_imports = true   # Ignores missing stubs. Optional, use it if you want to avoid errors on missing stubs.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/cze_wp_scraper",
    "src/cze_wp_scraper/py.typed",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/cze_wp_scraper",
    "src/cze_wp_scraper/py.typed",
]

[tool.hatch.build.targets.wheel.sources]
"src/cze_wp_scraper" = "cze_wp_scraper"
"src/cze_wp_scraper/py.typed" = "py.typed"
